added log files

--- a/email-tool/package.json
+++ b/email-tool/package.json
@@ -12,16 +12,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/local-auth": "^3.0.1",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "axios": "^1.7.2",
     "bullmq": "^5.8.2",
     "dotenv": "^16.4.5",
     "googleapis": "^140.0.1",
-    "isomorphic-fetch": "^3.0.0"
+    "isomorphic-fetch": "^3.0.0",
+    "node-outlook": "^1.1.8",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/node": "^20.14.9",
+    "@types/winston": "^2.4.4",
     "typescript": "^5.5.2"
   }
 }
